--- a/assignments/05.md
+++ b/assignments/05.md
@@ -1,3 +1,5 @@
 # Respond to `OrderPlaced` with a command: `MakeSeatReservation`
 
-- 
+- After creating a conference, `orders_and_registrations` should create a `SeatsAvailability` aggregate for it. The ID of the this aggregate can be conveniently the same as the conference ID. See the existing class `SeatsAvailability` and the corresponding unit tests.
+- After an order gets placed, `orders_and_registrations` should make a seat reservation using the appropriate `SeatsAvailability` aggregate.
+- You can either handle the seat reservation synchronously or asynchronously if you like (even though it happens in the same context).
