--- a/assignments/03.md
+++ b/assignments/03.md
@@ -3,6 +3,6 @@
 - Make the entity implement `EventSourcedAggregate` and make it `use` the `EventSourcedAggregateCapabilities` trait.
 - Fix `OrderTest` (remote the call to `markTestIncomplete` first, run the tests using `./run-tests.sh`).
 - Instead of using `Database` to persist `Order` instances, use the "event-sourced aggregate repository" returned by `Application::orderRepository()`.
-- Move the code for sending an email to the event listener method `whenOrderPlaced`.
+- Move the code for sending an email to the event listener method `Application::whenOrderPlaced`.
 - Make sure events are taken from the aggregate (by calling `popRecordedEvents()`) and dispatched using the event dispatcher returned by `Application::eventDispatcher()`.
 - To see if the email has been sent, open Mailcatcher: [`localhost:1080`](http://localhost:1080).
