--- a/assignments/04.md
+++ b/assignments/04.md
@@ -4,7 +4,11 @@
 - `ConferenceWeb` should have its own consumer, consuming such event messages, building up a local read model to be used instead of querying `conference_management` all the time.
 - Use [Redis](https://redis.io/commands) to store the read models. Here are some examples which use the pre-installed [`predis` library](https://github.com/nrk/predis):
 
-    ```php
+    ```php 
+    $redis = new Client([
+        'host' => 'redis'
+    ]);
+
     $projection = new \stdClass();
     $projection->id = $eventData->id;
     $projection->name = $eventData->name;
